--- a/TB_QuestGame/TB_QuestGame.csproj
+++ b/TB_QuestGame/TB_QuestGame.csproj
@@ -50,12 +50,15 @@
     <Compile Include="ConsoleUtilities\ConsoleWindowControl.cs" />
     <Compile Include="ConsoleUtilities\ConsoleWindowHelper.cs" />
     <Compile Include="Controllers\Controller.cs" />
+    <Compile Include="Models\IslandLocation.cs" />
     <Compile Include="Models\Character.cs" />
     <Compile Include="Models\Menu.cs" />
     <Compile Include="Models\Player.cs" />
     <Compile Include="Models\PlayerAction.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Models\Universe.cs" />
+    <Compile Include="Models\UniverseObjects.cs" />
     <Compile Include="Views\ConsoleView.cs" />
   </ItemGroup>
   <ItemGroup>
