--- a/TB_QuestGame/TB_QuestGame.csproj
+++ b/TB_QuestGame/TB_QuestGame.csproj
@@ -50,20 +50,27 @@
     <Compile Include="ConsoleUtilities\ConsoleWindowControl.cs" />
     <Compile Include="ConsoleUtilities\ConsoleWindowHelper.cs" />
     <Compile Include="Controllers\Controller.cs" />
+    <Compile Include="Models\Objects\Food.cs" />
+    <Compile Include="Models\GameObject.cs" />
     <Compile Include="Models\IslandLocation.cs" />
     <Compile Include="Models\Character.cs" />
     <Compile Include="Models\Menu.cs" />
     <Compile Include="Models\Player.cs" />
-    <Compile Include="Models\PlayerAction.cs" />
+    <Compile Include="Models\Enums\PlayerAction.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Models\Universe.cs" />
-    <Compile Include="Models\UniverseObjects.cs" />
+    <Compile Include="Assets\UniverseObjectsIslandLocations.cs" />
+    <Compile Include="Models\Objects\Ship.cs" />
+    <Compile Include="Assets\UniverseObjectsGameObjects.cs" />
+    <Compile Include="Models\Objects\Treasure.cs" />
     <Compile Include="Views\ConsoleView.cs" />
+    <Compile Include="Models\Objects\Weapon.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
